[package]
name = "hammurabi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hammurabi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "=0.27.0", features = [ "init-if-needed" ] }
anchor-spl = "=0.27.0"
solana-program = "=1.14.16"
winnow = "=0.4.1"
toml_datetime = "=0.6.0"
mpl-token-metadata = {version = "1.10.0", features = ["no-entrypoint"]}
blake3 = "=1.3.1"
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }
