[package]
name = "hammurabi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hammurabi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", features = [ "init-if-needed" ] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor" }
solana-program = "=1.16.14"
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }
solana-address-lookup-table-program ="1.16.14"
spl-discriminator = "0.1.0"
spl-tlv-account-resolution = "0.4.0"
